# sim_city_UP

./: construccion.py  log.py  main.py  preguntas.py  pyproject.toml  tablero.py
