[tool.poetry]
name = "simcity game"
version = "0.1.0"
description = "Juego SimCity para la materia Analisis de sistemas UP"
authors = ["Nicolas Ferrero <nicolasferreroutn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
